minor changes: FLOATING_HEADER_BREAKPOINT, carrusel alignment, x-align-on class correction, ...

--- a/src/sass/modulos/_header.sass
+++ b/src/sass/modulos/_header.sass
@@ -44,50 +44,9 @@
 
 	&.fixed
 		box-shadow: 0 0 5px rgba(0,0,0,.5)
-		&[data-theme='theme1'], 
-		&[data-theme='theme2'], 
-		&[data-theme='theme3'] 
-			background-color: $dark-fixed-header-color
-		&[data-theme='theme4'], 
-		&[data-theme='theme5'], 
-		&[data-theme='theme6'] 
-			background-color: $light-fixed-header-color
-			box-shadow: 0 0 5px rgba(0,0,0,.1)
 
 	&.hide-logo:not(.fixed) &__logo
 		opacity: 0
-
-
-	&[data-theme='theme1']
-		color: #fff
-		a
-			color: #fff
-
-	&[data-theme='theme2']
-		background-color: #000
-		color: #fff
-		a
-			color: #fff
-
-	&[data-theme='theme3']
-		background-color: $primary-color
-		color: #fff
-		a
-			color: #fff
-
-	&[data-theme='theme4']
-		color: #000
-		a
-			color: #000
-
-	&[data-theme='theme5']
-		background-color: #fff
-
-	&[data-theme='theme6']
-		background-color: $primary-color
-		color: #000
-		a
-			color: #000
 
 
 
