--- a/src/sass/ultimate-fields/componentes/carrusel.sass
+++ b/src/sass/ultimate-fields/componentes/carrusel.sass
@@ -4,6 +4,8 @@
 	&__slider
 		display: flex
 		align-items: center
+		justify-content: center
+		min-width: 100% !important
 
 	&__item
 		text-align: center
